--- a/AndoridApp/app/src/main/res/layout/activity_trip_details.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_trip_details.xml
@@ -112,6 +112,24 @@
             android:clickable="false"
             android:focusableInTouchMode="false"
             android:paddingLeft="20dp"/>
+        <TextView
+            android:id="@+id/cost"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cost"
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="20dp"/>
+
+        <EditText
+            android:id="@+id/costEDT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:editable="false"
+            android:enabled="false"
+            android:clickable="false"
+            android:focusableInTouchMode="false"
+            android:paddingLeft="20dp"/>
         <Button
         android:id="@+id/driverDetails"
         android:layout_width="wrap_content"
