--- a/AndoridApp/app/src/main/res/layout/activity_trip_search.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_trip_search.xml
@@ -40,6 +40,7 @@
 
     <EditText
         android:id="@+id/fromTxt"
+        android:text="portsaid"
         android:layout_width="225dp"
         android:layout_height="34dp"
         android:layout_marginBottom="15dp"
@@ -55,6 +56,7 @@
 
     <EditText
         android:id="@+id/toTxt"
+        android:text="alex"
         android:layout_width="225dp"
         android:layout_height="34dp"
         android:layout_marginBottom="274dp"
