--- a/AndoridApp/app/src/main/res/layout/content_create_trip.xml
+++ b/AndoridApp/app/src/main/res/layout/content_create_trip.xml
@@ -136,7 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView18"
         android:layout_centerHorizontal="true"
-        android:inputType="number"
+        android:inputType="none"
         android:text="" />
 
     <TextView
@@ -155,6 +155,6 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/textView20"
         android:layout_centerHorizontal="true"
-        android:inputType="numberDecimal"
+        android:inputType="none"
         android:text="" />
 </RelativeLayout>
