--- a/AndoridApp/app/src/main/res/layout/activity_splash.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_splash.xml
@@ -4,14 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.rania.itigraduationproject.SplashScreen">
+    tools:context="com.example.rania.itigraduationproject.SplashScreen"
+    android:background="#1e1e82">
 
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="Hello" />
+        android:layout_marginTop="93dp"
+        android:text="Ride Sharing"
+        android:textColor="@android:color/white"
+        android:textSize="50dp" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        app:srcCompat="@drawable/carlogo" />
+
+
 </RelativeLayout>
