--- a/AndoridApp/app/src/main/res/layout/content_create_trip.xml
+++ b/AndoridApp/app/src/main/res/layout/content_create_trip.xml
@@ -26,7 +26,7 @@
 
     <EditText
         android:id="@+id/TripName"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp" />
@@ -40,7 +40,7 @@
 
     <EditText
         android:id="@+id/TripDetails"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp" />
 
@@ -54,7 +54,7 @@
 
     <EditText
         android:id="@+id/TripFrom"
-        android:layout_width="match_parent"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp" />
 
@@ -68,7 +68,7 @@
 
     <EditText
         android:id="@+id/TripTo"
-        android:layout_width="match_parent"
+        android:layout_width="251dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp" />
 
@@ -81,10 +81,10 @@
 
     <EditText
         android:id="@+id/numberOfSeats"
-        android:layout_width="match_parent"
+        android:layout_width="251dp"
         android:layout_height="wrap_content"
-        android:inputType="number"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="30dp"
+        android:inputType="number" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -95,11 +95,10 @@
 
     <EditText
         android:id="@+id/TripCost"
-        android:layout_width="match_parent"
+        android:layout_width="255dp"
         android:layout_height="wrap_content"
-        android:inputType="number|numberDecimal"
         android:layout_marginTop="30dp"
-        />
+        android:inputType="number|numberDecimal" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
