--- a/AndoridApp/app/src/main/res/layout/activity_trip_search.xml
+++ b/AndoridApp/app/src/main/res/layout/activity_trip_search.xml
@@ -8,7 +8,7 @@
     android:rowCount="2"
     tools:context=".TripSearch">
 
-    <GridLayout
+    <AbsoluteLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -16,54 +16,83 @@
         android:rowCount="2"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
-    <TextView
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/from"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="20dp" />
 
-    <EditText
-        android:id="@+id/fromTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:focusableInTouchMode="true"
-        android:paddingLeft="20dp"/>
-    <TextView
-        android:id="@+id/editText3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/to"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="20dp" />
-
-    <EditText
-        android:id="@+id/toTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:focusableInTouchMode="true"
-        android:paddingLeft="20dp" />
         <TextView
+            android:id="@+id/editText2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:layout_marginLeft="20dp"
             android:layout_marginRight="10dp"
-            android:layout_marginLeft="20dp" />
+            android:layout_x="6dp"
+            android:layout_y="28dp"
+            android:text="@string/from" />
+
+        <fragment
+            android:id="@+id/location_autocomplete_fragment"
+            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+            android:layout_width="298dp"
+            android:layout_height="wrap_content"
+            android:layout_x="49dp"
+            android:layout_y="64dp" />
+
+        <TextView
+            android:id="@+id/editText3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="10dp"
+            android:layout_x="15dp"
+            android:layout_y="82dp"
+            android:text="@string/to" />
+
+        <fragment
+            android:id="@+id/destination_autocomplete_fragment"
+            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+            android:layout_width="298dp"
+            android:layout_height="wrap_content"
+            android:layout_x="49dp"
+            android:layout_y="9dp" />
 
         <Button
             android:id="@+id/search_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="50dp"
+            android:layout_marginTop="20dp"
+            android:layout_x="139dp"
+            android:layout_y="143dp"
             android:background="@drawable/buttondesign"
             android:text="@string/Search"
-            android:textSize="20dp"
-            android:textColor="@android:color/black"/>
-    </GridLayout>
+            android:textColor="@android:color/black"
+            android:textSize="20dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            tools:layout_editor_absoluteX="37dp"
+            tools:layout_editor_absoluteY="162dp" />
+
+        <ImageView
+            android:id="@+id/location_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_x="344dp"
+            android:layout_y="74dp"
+            app:srcCompat="@drawable/address"
+            tools:layout_editor_absoluteX="326dp"
+            tools:layout_editor_absoluteY="6dp" />
+
+        <ImageView
+            android:id="@+id/destination_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_x="345dp"
+            android:layout_y="19dp"
+            app:srcCompat="@drawable/address"
+            tools:layout_editor_absoluteX="326dp"
+            tools:layout_editor_absoluteY="6dp" />
+    </AbsoluteLayout>
 
 
 
