--- a/AndoridApp/app/src/main/res/layout/content_create_trip.xml
+++ b/AndoridApp/app/src/main/res/layout/content_create_trip.xml
@@ -7,160 +7,161 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".CreateTrip"
     tools:showIn="@layout/activity_create_trip">
-<GridLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_alignParentTop="true"
-    android:columnCount="2"
-    android:rowCount="2"
-    android:layout_alignParentRight="true"
-    android:layout_alignParentEnd="true">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Trip Name"
-        android:layout_marginLeft="20dp" />
-
-
-    <EditText
-        android:id="@+id/TripName"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trip Details"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp" />
-
-    <EditText
-        android:id="@+id/TripDetails"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp" />
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"
-        android:text="Trip From" />
-
-    <LinearLayout
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:columnCount="2"
+        android:rowCount="2">
 
-        <fragment
-            android:id="@+id/location_autocomplete_fragment"
-            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:text="Trip Name" />
+
+
+        <EditText
+            android:id="@+id/TripName"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:text="Trip Details" />
+
+        <EditText
+            android:id="@+id/TripDetails"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:text="Trip From" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="49dp"
+            android:orientation="horizontal">
+
+            <fragment
+                android:id="@+id/location_autocomplete_fragment"
+                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+
+                android:layout_width="245dp"
+                android:layout_height="wrap_content"
+                android:layout_x="49dp"
+                android:layout_y="9dp" />
+            <!--android:layout_width="match_parent"-->
+
+            <ImageView
+                android:id="@+id/location_map"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                app:srcCompat="@drawable/address" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:text="Trip To" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp">
+
+            <fragment
+                android:id="@+id/destination_autocomplete_fragment"
+                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+                android:layout_width="247dp"
+                android:layout_height="wrap_content"
+                android:layout_x="49dp"
+                android:layout_y="9dp"
+                android:baselineAligned="false" />
+            <!--android:layout_width="248dp"-->
+
+
+            <ImageView
+                android:id="@+id/destination_map"
+
+                android:layout_width="wrap_content"
+                android:layout_height="69dp"
+                app:srcCompat="@drawable/address" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:text="Seats number" />
+
+        <EditText
+            android:id="@+id/numberOfSeats"
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:inputType="number" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:text="cost" />
+
+        <EditText
+            android:id="@+id/TripCost"
+            android:layout_width="255dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:inputType="number|numberDecimal" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:text="Trip Time" />
+
+        <TextView
+            android:id="@+id/TripTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_x="49dp"
-            android:layout_y="9dp" />
+            android:layout_marginTop="30dp"
+            android:text="Time" />
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/address" />
-    </LinearLayout>
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="30dp"
+            android:text="Trip Day" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trip To"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"
-        />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <fragment
-            android:id="@+id/destination_autocomplete_fragment"
-            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-            android:layout_width="248dp"
+        <TextView
+            android:id="@+id/TripDay"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_x="49dp"
-            android:layout_y="9dp" />
-
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/address" />
-    </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Seats number"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"/>
-
-    <EditText
-        android:id="@+id/numberOfSeats"
-        android:layout_width="251dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:inputType="number" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="cost"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="30dp"/>
-
-    <EditText
-        android:id="@+id/TripCost"
-        android:layout_width="255dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:inputType="number|numberDecimal" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trip Time"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"/>
-
-    <TextView
-        android:id="@+id/TripTime"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Time" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Trip Day"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="20dp"/>
-
-    <TextView
-        android:id="@+id/TripDay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Day"
-        android:layout_marginTop="30dp"/>
+            android:layout_marginTop="30dp"
+            android:text="Day" />
 
 
-
-</GridLayout>
+    </GridLayout>
 
 </ScrollView>
